--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,4 @@
 {
-  "extensions.ignoreRecommendations": true,
-  "C_Cpp.default.configurationProvider": "particle.particle-vscode-core",
-  "files.associations": {
-    "*.ino": "cpp"
-  },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
@@ -60,9 +55,5 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "r.lsp.promptToInstall": false,
-  "particle.firmwareVersion": "6.1.0",
-  "particle.targetPlatform": "argon",
-  "particle.targetDevice": "e00fce68812c878ef08a8c68"
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
